--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-size: 30px;
+    font-family: Lato;
 }
 
 .header {
@@ -62,7 +63,7 @@
 }
 
 .menu_section ul li a {
-    font-family: Lato;
+    font-family: 'Lato', sans-serif;
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
@@ -94,7 +95,7 @@
 }
 
 .content {
-    padding: 0 230px;
+    /* padding: 0 230px; */
 }
 
 
@@ -202,7 +203,7 @@
     margin-top: 65px;
     margin-bottom: 6px;
     width: 1200px;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -214,7 +215,7 @@
     text-align: center;
     width: 1200px;
     margin-bottom: 48px;
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -271,7 +272,7 @@
 }
 
 .item-price {
-    font-family: 'Lato';
+    font-family: 'Lato', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -336,7 +337,163 @@
 
 }
 
-.footer {
-    background-color: #cccc;
-    height: 100px;
+.button-product {
+    display: block;
+    margin: 25px auto 60px;
+    font-size: 16px;
+}
+
+button {
+    background: #F16D7F;
+    border: 1px solid #FF6A6A;
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    padding: 14px 38px;
+    color: #FFFFFF;
+    box-sizing: border-box;
+
+}
+
+button:hover {
+    background-color: #fff;
+    color: #F16D7F;
+    /* border-style: none;  */
+    /* border: 1px #F16D7F transparent */
+}
+
+.footer1 {
+    background-color: #222;
+    color: #fff;
+    box-sizing: border-box;
+}
+
+.footer1-content {
+    display: flex;
+    justify-content: space-around;
+    padding: 103px 0;
+}
+
+.footer1-content_card {
+    text-align: center;
+}
+
+.footer1-content_card p {
+    margin-top: 28px;
+}
+
+.footer2 {
+    background: url("./картинки/footer/Layer\ 41.png") no-repeat;
+    /* background-size: cover; */
+    background-size: 100% 100%;
+    width: 100%;
+    height: 400px;
+    box-shadow: inset 0px 0px 0px 256px rgba(255, 255, 255, 0.45);
+}
+
+/* .footer2-content_card input {
+    margin: 0px;
+    padding: 0px;
+    border: 0;
+    padding: 0 !important;
+} */
+
+.footer2-content {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.footer2-content_card {
+    /* display: flex; */
+    text-align: center;
+    width: 460px;
+    margin-top: 86px;
+    margin-bottom: 126px;
+}
+
+.footer2-content_card p {
+    font-size: 24px;
+}
+
+.footer2-content_card img {
+    padding-bottom: 20px;
+}
+
+.footer2-content_card .button {
+    border-bottom-right-radius: 40px;
+    border-top-right-radius: 40px;
+    background-color: #F16D7F;
+    color: #F8F8F8;
+    padding: 15px;
+    border: 1px #F16D7F transparent;
+    font-size: 14px;
+}
+
+.footer2-content_card .button:hover {
+    background-color: #fff;
+    color: #F16D7F;
+    border: 1px solid #FF6A6A transparent;
+}
+
+.footer2-content_card form {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer2-content_card input {
+    border-style: none;
+    background-color: #f5f0f1;
+    border-bottom-left-radius: 40px;
+    border-top-left-radius: 40px;
+    outline: none;
+    color: #000;
+    box-sizing: border-box;
+    font-size: 14px;
+    width: 300px;
+}
+
+.footer2-content_card:nth-of-type(2) p {
+    font-size: 18px;
+}
+
+.footer2-content_card:nth-of-type(2) h4 {
+    font-size: 24px;
+    margin-top: 50px;
+}
+
+.footer3 {
+    background-color: #222;
+}
+
+.footer3 p {
+    font-size: 16px;
+    color: white;
+}
+
+.footer3_content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 0 20px 0;
+}
+
+.fa {
+    font-size: 22px;
+    background-color: white;
+    border-radius: 2px;
+    padding: 5px;
+    line-height: 10px;
+}
+
+.fa:hover {
+    background-color: #F16D7F;
+    color: white;
+}
+
+.fa-vk {
+    /* color: rgb(93, 68, 217) */
 }
