--- a/cart/cart.sass
+++ b/cart/cart.sass
@@ -200,7 +200,7 @@ audio
         margin-top: 28px
 
 .footer2
-    background: url("картинки/footer/Layer\ 41.png") no-repeat
+    background: url("../картинки/footer/Layer\ 41.png") no-repeat
     background-size: 100% 100%
     width: 100%
     height: 400px
@@ -228,7 +228,7 @@ audio
         background-color: #F16D7F
         color: #F8F8F8
         padding: 15px
-        border: 1px #F16D7F transparent
+        border: 1px solid #F16D7F
         font-size: 14px
 
     &-content_card .button:hover
@@ -251,6 +251,7 @@ audio
         box-sizing: border-box
         font-size: 14px
         width: 300px
+        padding-left: 20px
 
     &-content_card:nth-of-type(2) p
         font-size: 18px
