--- a/catalog/catalog.less
+++ b/catalog/catalog.less
@@ -3,7 +3,6 @@
     font-size: 16px !important;
 }
 
-
 @media (min-width: 1400px) and (max-width: 2500px) {
 
     .container,
@@ -130,15 +129,6 @@
     height: inherit;
 }
 
-
-/* .d-flex {
-    display: flex;
-}
-
-.align-items-center {
-    align-items: center;
-} */
-
 :root {
     --bs-breadcrumb-item-active-color: rgb(128, 0, 68);
 }
@@ -150,10 +140,6 @@
 .breadcrumb-item {
     color: #636363;
 }
-
-/* .breadcrumb-item.active {
-    color: #F16D7F;
-} */
 
 .header div img,
 .header div a {
@@ -215,8 +201,6 @@ audio {
     letter-spacing: 0em;
     text-align: left;
     color: #6F6E6E;
-    ;
-
 }
 
 .menu_box li:last-of-type {
@@ -245,6 +229,8 @@ audio {
     margin-bottom: 20px;
 }
 
+@import url(catalog_origin.css);
+
 
 .footer1 {
     background-color: #222;
@@ -267,7 +253,7 @@ audio {
 }
 
 .footer2 {
-    background: url("./картинки/footer/Layer\ 41.png") no-repeat;
+    background: url("../картинки/footer/Layer\ 41.png") no-repeat;
     /* background-size: cover; */
     background-size: 100% 100%;
     width: 100%;
@@ -336,6 +322,7 @@ audio {
     box-sizing: border-box;
     font-size: 14px;
     width: 300px;
+    padding-left: 20px;
 }
 
 .footer2-content_card:nth-of-type(2) p {
