--- a/cart/cart.css
+++ b/cart/cart.css
@@ -274,7 +274,7 @@ audio {
 }
 
 .footer2 {
-  background: url("картинки/footer/Layer 41.png") no-repeat;
+  background: url("../картинки/footer/Layer 41.png") no-repeat;
   background-size: 100% 100%;
   width: 100%;
   height: 400px;
@@ -307,7 +307,7 @@ audio {
   background-color: #F16D7F;
   color: #F8F8F8;
   padding: 15px;
-  border: 1px #F16D7F transparent;
+  border: 1px solid #F16D7F;
   font-size: 14px;
 }
 
@@ -333,6 +333,7 @@ audio {
   box-sizing: border-box;
   font-size: 14px;
   width: 300px;
+  padding-left: 20px;
 }
 
 .footer2-content_card:nth-of-type(2) p {
